packages/next-swc/crates/core/tests/errors/next-font-loaders/options-object/output.js
import a from 'next/font/target.module.css?{"arguments":[{}],"import":"ABeeZee","loader":"@next/font/google","path":"pages/test.tsx"}';
import a from 'next/font/target.module.css?{"arguments":[{}],"import":"ABeeZee","loader":"@next/font/google","path":"pages/test.tsx"}';
import a from 'next/font/target.module.css?{"arguments":[{}],"import":"ABeeZee","loader":"@next/font/google","path":"pages/test.tsx"}';
import a from 'next/font/target.module.css?{"arguments":[{}],"import":"ABeeZee","loader":"@next/font/google","path":"pages/test.tsx"}';
const a = fn({
    10: 'hello'
});
const a = fn({
    variant: [
        i1
    ]
});
const a = fn({
    variant: ()=>{}
});
const a = fn({
    ...{}
});
